--- a/src/app.scss
+++ b/src/app.scss
@@ -4,3 +4,8 @@
 // @import "~taro-ui/dist/style/components/list.scss";
 @import "~taro-ui/dist/style/components/icon.scss";
 @import "~taro-ui/dist/style/components/modal.scss";
+@import "~taro-ui/dist/style/components/progress.scss";
+
+button::after {
+  border: none;
+}
