--- a/src/pages/my/index.scss
+++ b/src/pages/my/index.scss
@@ -1,12 +1,14 @@
 .page_my {
   height: 100vh;
   background: url(https://www.lemonduck.cn/images/4.jpg) no-repeat top / cover;
-  .page_my_inner{
+
+  .page_my_inner {
     height: 100vh;
     box-sizing: border-box;
     padding: 72px 48px;
-    background:rgba(255,255,255,.7);
+    background: rgba(255, 255, 255, .7);
   }
+
   .content {
     margin-top: 48px;
   }
